test/fail/basic_syntax/list_strings_no_comma.lly
#[
SyntaxError: Unexpected token 'a string'.
Where: File "list_strings_no_comma.lly" at line 6
]#

var s = ["1" "2"]
